ANTLR/PrologParser.py
# Generated from Prolog.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PrologParser ( Parser ):

    grammarFileName = "Prolog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':-'", "'.'", "','", "'('", "')'", "'-'", 
                     "'['", "'|'", "']'", "'{'", "'}'", "'-->'", "'?-'", 
                     "'dynamic'", "'multifile'", "'discontiguous'", "'public'", 
                     "';'", "'->'", "'\\+'", "'='", "'\\='", "'=='", "'\\=='", 
                     "'@<'", "'@=<'", "'@>'", "'@>='", "'=..'", "'is'", 
                     "'=:='", "'=\\='", "'<'", "'=<'", "'>'", "'>='", "':'", 
                     "'+'", "'/\\'", "'\\/'", "'*'", "'/'", "'//'", "'rem'", 
                     "'mod'", "'<<'", "'>>'", "'**'", "'^'", "'\\'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LETTER_DIGIT", "VARIABLE", "DECIMAL", "BINARY", "OCTAL", 
                      "HEX", "CHARACTER_CODE_CONSTANT", "FLOAT", "GRAPHIC_TOKEN", 
                      "QUOTED", "DOUBLE_QUOTED_LIST", "BACK_QUOTED_STRING", 
                      "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_p_text = 0
    RULE_directive = 1
    RULE_clause = 2
    RULE_termlist = 3
    RULE_term = 4
    RULE_operator_ = 5
    RULE_atom = 6
    RULE_integer = 7

    ruleNames =  [ "p_text", "directive", "clause", "termlist", "term", 
                   "operator_", "atom", "integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    LETTER_DIGIT=52
    VARIABLE=53
    DECIMAL=54
    BINARY=55
    OCTAL=56
    HEX=57
    CHARACTER_CODE_CONSTANT=58
    FLOAT=59
    GRAPHIC_TOKEN=60
    QUOTED=61
    DOUBLE_QUOTED_LIST=62
    BACK_QUOTED_STRING=63
    WS=64
    COMMENT=65
    MULTILINE_COMMENT=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class P_textContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PrologParser.EOF, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrologParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(PrologParser.DirectiveContext,i)


        def clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrologParser.ClauseContext)
            else:
                return self.getTypedRuleContext(PrologParser.ClauseContext,i)


        def getRuleIndex(self):
            return PrologParser.RULE_p_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_text" ):
                listener.enterP_text(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_text" ):
                listener.exitP_text(self)




    def p_text(self):

        localctx = PrologParser.P_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_p_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -2854) != 0):
                self.state = 18
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 16
                    self.directive()
                    pass

                elif la_ == 2:
                    self.state = 17
                    self.clause()
                    pass


                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(PrologParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(PrologParser.TermContext,0)


        def getRuleIndex(self):
            return PrologParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)




    def directive(self):

        localctx = PrologParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(PrologParser.T__0)
            self.state = 26
            self.term(0)
            self.state = 27
            self.match(PrologParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(PrologParser.TermContext,0)


        def getRuleIndex(self):
            return PrologParser.RULE_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause" ):
                listener.enterClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause" ):
                listener.exitClause(self)




    def clause(self):

        localctx = PrologParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.term(0)
            self.state = 30
            self.match(PrologParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrologParser.TermContext)
            else:
                return self.getTypedRuleContext(PrologParser.TermContext,i)


        def getRuleIndex(self):
            return PrologParser.RULE_termlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermlist" ):
                listener.enterTermlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermlist" ):
                listener.exitTermlist(self)




    def termlist(self):

        localctx = PrologParser.TermlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_termlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.term(0)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 33
                self.match(PrologParser.T__2)
                self.state = 34
                self.term(0)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrologParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Atom_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(PrologParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_term" ):
                listener.enterAtom_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_term" ):
                listener.exitAtom_term(self)


    class Binary_operatorContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrologParser.TermContext)
            else:
                return self.getTypedRuleContext(PrologParser.TermContext,i)

        def operator_(self):
            return self.getTypedRuleContext(PrologParser.Operator_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_operator" ):
                listener.enterBinary_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_operator" ):
                listener.exitBinary_operator(self)


    class Unary_operatorContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operator_(self):
            return self.getTypedRuleContext(PrologParser.Operator_Context,0)

        def term(self):
            return self.getTypedRuleContext(PrologParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_operator" ):
                listener.enterUnary_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_operator" ):
                listener.exitUnary_operator(self)


    class Braced_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(PrologParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraced_term" ):
                listener.enterBraced_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraced_term" ):
                listener.exitBraced_term(self)


    class List_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def termlist(self):
            return self.getTypedRuleContext(PrologParser.TermlistContext,0)

        def term(self):
            return self.getTypedRuleContext(PrologParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_term" ):
                listener.enterList_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_term" ):
                listener.exitList_term(self)


    class VariableContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(PrologParser.VARIABLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class FloatContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(PrologParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)


    class Compound_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(PrologParser.AtomContext,0)

        def termlist(self):
            return self.getTypedRuleContext(PrologParser.TermlistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_term" ):
                listener.enterCompound_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_term" ):
                listener.exitCompound_term(self)


    class Integer_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def integer(self):
            return self.getTypedRuleContext(PrologParser.IntegerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_term" ):
                listener.enterInteger_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_term" ):
                listener.exitInteger_term(self)


    class Curly_bracketed_termContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def termlist(self):
            return self.getTypedRuleContext(PrologParser.TermlistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCurly_bracketed_term" ):
                listener.enterCurly_bracketed_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCurly_bracketed_term" ):
                listener.exitCurly_bracketed_term(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PrologParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_term, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = PrologParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 41
                self.match(PrologParser.VARIABLE)
                pass

            elif la_ == 2:
                localctx = PrologParser.Braced_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 42
                self.match(PrologParser.T__3)
                self.state = 43
                self.term(0)
                self.state = 44
                self.match(PrologParser.T__4)
                pass

            elif la_ == 3:
                localctx = PrologParser.Integer_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 46
                    self.match(PrologParser.T__5)


                self.state = 49
                self.integer()
                pass

            elif la_ == 4:
                localctx = PrologParser.FloatContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 50
                    self.match(PrologParser.T__5)


                self.state = 53
                self.match(PrologParser.FLOAT)
                pass

            elif la_ == 5:
                localctx = PrologParser.Compound_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.atom()
                self.state = 55
                self.match(PrologParser.T__3)
                self.state = 56
                self.termlist()
                self.state = 57
                self.match(PrologParser.T__4)
                pass

            elif la_ == 6:
                localctx = PrologParser.Unary_operatorContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.operator_()
                self.state = 60
                self.term(4)
                pass

            elif la_ == 7:
                localctx = PrologParser.List_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 62
                self.match(PrologParser.T__6)
                self.state = 63
                self.termlist()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 64
                    self.match(PrologParser.T__7)
                    self.state = 65
                    self.term(0)


                self.state = 68
                self.match(PrologParser.T__8)
                pass

            elif la_ == 8:
                localctx = PrologParser.Curly_bracketed_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.match(PrologParser.T__9)
                self.state = 71
                self.termlist()
                self.state = 72
                self.match(PrologParser.T__10)
                pass

            elif la_ == 9:
                localctx = PrologParser.Atom_termContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.atom()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PrologParser.Binary_operatorContext(self, PrologParser.TermContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 77
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 78
                    self.operator_()
                    self.state = 79
                    self.term(5) 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Operator_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrologParser.RULE_operator_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator_" ):
                listener.enterOperator_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator_" ):
                listener.exitOperator_(self)




    def operator_(self):

        localctx = PrologParser.Operator_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799813681226) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PrologParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Backq_stringContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BACK_QUOTED_STRING(self):
            return self.getToken(PrologParser.BACK_QUOTED_STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackq_string" ):
                listener.enterBackq_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackq_string" ):
                listener.exitBackq_string(self)


    class CutContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCut" ):
                listener.enterCut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCut" ):
                listener.exitCut(self)


    class Empty_bracesContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty_braces" ):
                listener.enterEmpty_braces(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty_braces" ):
                listener.exitEmpty_braces(self)


    class Dq_stringContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOUBLE_QUOTED_LIST(self):
            return self.getToken(PrologParser.DOUBLE_QUOTED_LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDq_string" ):
                listener.enterDq_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDq_string" ):
                listener.exitDq_string(self)


    class NameContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LETTER_DIGIT(self):
            return self.getToken(PrologParser.LETTER_DIGIT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)


    class Quoted_stringContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def QUOTED(self):
            return self.getToken(PrologParser.QUOTED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuoted_string" ):
                listener.enterQuoted_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuoted_string" ):
                listener.exitQuoted_string(self)


    class Empty_listContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty_list" ):
                listener.enterEmpty_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty_list" ):
                listener.exitEmpty_list(self)


    class GraphicContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PrologParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)
